--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/chatapp 
+MONGODB_URI=mongodb://localhost:27017/socket-chat
+JWT_SECRET=your-super-secret-key-change-in-production 
