--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "mongoose": "^8.1.3",
-    "dotenv": "^16.4.4",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
-} 
+}
