--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Chat en temps réel avec Socket.IO et MongoDB",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
