--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+SERVER_URL=http://localhost:3000
 API_PORT=3000
 MONGODB_URI=mongodb://localhost:27017/socket-chat
 JWT_SECRET=your-super-secret-key-change-in-production 
